# rat

./: .gitignore  README.md  file.rat  main.cpp  meson.build  rat.cpp  rat.kdev4
.kdev4/: rat.kdev4
docs/: code_rules.md
documentation/: Conventions.md  Documentation.md  project_rules.md
source/: Converter.h  Parser.h  Tokenizer.cpp  Tokenizer.h  basic_functions.cpp  basic_functions.h  converter.cpp  converter.h  functions.cpp  functions.h  main.cpp  parser.cpp  parser.h  rat.cpp  rat.h  test.cpp  test.h  tokenizer.cpp
source/docopt/: meson.build
src/: main.cpp  rat.cpp
